--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-  xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee 
-  https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
-  version="5.0">
+         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+  https://jakarta.ee/xml/ns/jakartaee/web-app_4_0.xsd"
+         version="4.0">
 
-  <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-  	<servlet-name>Controller</servlet-name>
-  	<servlet-class>by.petrovich.storage.controller.Controller</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>Controller</servlet-name>
-  	<url-pattern>/Controller</url-pattern>
-  </servlet-mapping>
+    <display-name>Archetype Created Web Application</display-name>
+    <servlet>
+        <servlet-name>Controller</servlet-name>
+        <servlet-class>by.petrovich.storage.controller.Controller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Controller</servlet-name>
+        <url-pattern>/Controller</url-pattern>
+    </servlet-mapping>
+
+    <resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>jdbc/CncProgramPool</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
+
 </web-app>
