--- a/src/main/java/properties/local.properties
+++ b/src/main/java/properties/local.properties
@@ -1,3 +1,3 @@
 local.message = Default local
-local.locbutton.name.en = EN
-local.locbutton.name.ru = RU
+local.locbutton.en = EN
+local.locbutton.ru = RU
