--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,12 +15,12 @@
 		<url-pattern>/Controller</url-pattern>
 	</servlet-mapping>
 
-	<resource-ref>
+<!-- 	<resource-ref>
 		<description>DB Connection</description>
 		<res-ref-name>jdbc/CncProgramPool</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
-	</resource-ref>
+	</resource-ref> -->
 
 	<jsp-config>
 		<taglib>
