--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app
-		xmlns="https://jakarta.ee/xml/ns/jakartaee"
-		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
-		version="5.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+  https://jakarta.ee/xml/ns/jakartaee/web-app_4_0.xsd"
+	version="4.0">
 	<display-name>Archetype Created Web Application</display-name>
 	<servlet>
 		<servlet-name>Controller</servlet-name>
@@ -15,20 +15,19 @@
 		<url-pattern>/Controller</url-pattern>
 	</servlet-mapping>
 
-<!-- 	<resource-ref>
-		<description>DB Connection</description>
-		<res-ref-name>jdbc/CncProgramPool</res-ref-name>
-		<res-type>javax.sql.DataSource</res-type>
-		<res-auth>Container</res-auth>
-	</resource-ref> -->
-
 	<jsp-config>
 		<taglib>
 			<taglib-uri>customtags</taglib-uri>
 			<taglib-location>/WEB-INF/tld/tagLib.tld</taglib-location>
 		</taglib>
 	</jsp-config>
-	
-	<error-page></error-page>
 
+	<error-page>
+		<error-code>404</error-code>
+		<location>/pages/error.jsp</location>
+	</error-page>
+<!-- 	<error-page>
+		<exception-type>java.lang.RuntimeException</exception-type>
+		<location>/pages/error.jsp</location>
+	</error-page> -->
 </web-app>
