--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,19 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-
+		<!--for customTag jakarta don't touch!!!!! -->
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>5.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet.jsp</groupId>
+			<artifactId>jakarta.servlet.jsp-api</artifactId>
+			<version>3.0.0</version>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
