add dependences for tests

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,24 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-testng</artifactId>
+			<version>2.0.9</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.4.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.22.0</version>
+			<scope>test</scope>
+		</dependency>
 		<!--for customTag jakarta don't touch!!!!! -->
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
@@ -96,5 +114,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
