--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>2.1</version>
+			<scope>test</scope>
+		</dependency>
+
 		<!--for customTag jakarta don't touch!!!!! -->
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
