--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,18 @@
 		<error-code>404</error-code>
 		<location>/pages/error.jsp</location>
 	</error-page>
+	<error-page>
+		<error-code>503</error-code>
+		<location>/pages/error.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/pages/error.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>401</error-code>
+		<location>/pages/error.jsp</location>
+	</error-page>
 <!-- 	<error-page>
 		<exception-type>java.lang.RuntimeException</exception-type>
 		<location>/pages/error.jsp</location>
